# heyting-algebras

./: .travis.yml  ChangeLog.md  LICENSE  README.md  cabal.project  default.nix  heyting-algebra.cabal  heyting-algebras.cabal  pkg.nix  shell.nix
.github/workflows/: posix.yml
nix/: free-algebras-0.0.5.0.nix  free-algebras.nix  lattices.nix  nixpkgs.nix  sources.json
src/Algebra/: Boolean.hs  Heyting.hs
src/Algebra/Boolean/: Free.hs  Properties.hs
src/Algebra/Heyting/: BoolRing.hs  CounterExample.hs  Free.hs  Layered.hs  Properties.hs
src/Data/: HeytingAlgebra.hs
test/: Main.hs
