name:                heyting-algebras
version:             0.0.1.0
synopsis:            Heyting and Boolean algebras
-- description:
license:             MPL-2.0
license-file:        LICENSE
author:              Marcin Szamotulski
maintainer:          profunctor@pm.me
copyright:           (c) 2018 Marcin Szamotulski
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10
tested-with:         GHC==8.2.2, GHC==8.4.3

library
  exposed-modules:     Algebra.Heyting
                       Algebra.Heyting.Free
                       Algebra.Heyting.Layered
                       Algebra.Boolean
                       Algebra.Boolean.Free
  -- other-modules:
  -- other-extensions:
  build-depends:       base           >= 4.9      && < 4.13
                     , containers     >= 0.5.8.1  && < 0.7
                     , free-algebras  >= 0.0.4    && < 0.0.5    
                     , hashable       >= 1.2.6.1  && < 1.3
                     , lattices       >= 1.0      && < 1.11
                     , tagged         >= 0.8.5    && < 0.9
                     , QuickCheck     >= 2.10     && < 2.13
                     , unordered-containers
                                      >= 0.2.6.0  && < 0.3
                     , universe-base  >= 1.0      && < 1.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances
                       RankNTypes
  ghc-options:        -Wall

test-suite heyting-algebras-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Main.hs
  build-depends:       base
                     , containers
                     , lattices
                     , universe-base
                     , QuickCheck
                     , heyting-algebras
                     , tasty
                     , tasty-quickcheck
  default-language:    Haskell2010
  default-extensions:  FlexibleInstances
                     , TypeApplications

source-repository head
  type:     git
  location: https://github.com/coot/heyting-algebras
  
